--- a/framework/configuration.json
+++ b/framework/configuration.json
@@ -1,4 +1,4 @@
 {
-  "template_lib": "..\\tic_tact_toe\\game_templates.xml",
+  "template_lib": "..\\tic_tact_toe\\command_templates",
   "dispatch_map": "..\\tic_tact_toe\\game_dispatch.json"
 }
