Removed the publicly exposed API key. Added validation to detect if the programmer did not enter their own.

--- a/framework/speech_recognition/configuration.json
+++ b/framework/speech_recognition/configuration.json
@@ -4,7 +4,7 @@
   "URL": "https://speech.googleapis.com/v1/speech:recognize",
   "authentication": {
     "service_account_var": "GOOGLE_APPLICATION_CREDENTIALS",
-    "API_KEY": "AIzaSyATg8YISwxaNj19DuXKDdjktuHghWImUtA"
+    "API_KEY": ""
   },
   "recording": {
     "default_timeout": 30,
