Changed the framework folder to a proper package. Added __init__.py, normalized and cleaned up imports across the board. Refactored speech_recognizer. Ripped out the pyaudio, wave, and pydub dependencies. Switched to a lossless recording format and removed a (now redundant) conversion step.

--- a/framework/speech_recognition/configuration.json
+++ b/framework/speech_recognition/configuration.json
@@ -10,13 +10,13 @@
     "default_timeout": 30,
     "chunk": 1024,
     "format": "paInt16",
-    "channels": 2,
+    "channels": 1,
     "rate": 44100,
     "wave_filename": "output.wav",
     "buffer_name": "Recording"
   },
   "transcription": {
     "language": "en-US",
-    "encoding": "mp3"
+    "encoding": "linear16"
   }
 }
