1) Refactored import statements across the project to allow for command-line runs. 2) Finished integrating the 'groups' functionality. 3) Fixed a bug in tic-tac-toe that prevented ties. 4) Fully integrated VCF into Google-Image-Search 5) Corrected the issue that required a path to pipeline config be specified relatively to the framework folder.

--- a/tic_tact_toe/pipeline_config.json
+++ b/tic_tact_toe/pipeline_config.json
@@ -1,4 +1,4 @@
 {
-  "template_lib": "..\\tic_tact_toe\\command_templates",
-  "dispatch_map": "..\\tic_tact_toe\\game_dispatch.json"
+  "template_lib": "command_templates",
+  "dispatch_map": "game_dispatch.json"
 }
