Turned the framework into a proper package that can be installed with pip. Fixed import statements for what is hopefully the last time.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /sync-request.json
 /massive-bliss-278019-2d1d6fee4de6.json
+/vcf/cheat_sheet.txt
+/tic_tact_toe/pipeline.log
+/vcf/framework/pipeline.log
